--- a/EditorAvalonia/EditorAvalonia.csproj
+++ b/EditorAvalonia/EditorAvalonia.csproj
@@ -1,48 +1,83 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-    <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+		<ApplicationManifest>app.manifest</ApplicationManifest>
+		<AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AssimpNet" Version="4.1.0" />
-    <PackageReference Include="Avalonia" Version="11.2.6" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.2.6" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.6" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.6" />
-    <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Include="Avalonia.Diagnostics" Version="11.2.6">
-      <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
-      <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Dock.Avalonia" Version="11.2.0.2" />
-    <PackageReference Include="Dock.Model.Mvvm" Version="11.2.0.2" />
-    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
-    <PackageReference Include="ReactiveUI" Version="20.2.45" />
-    <PackageReference Include="Semi.Avalonia" Version="11.2.1.6" />
-    <PackageReference Include="Semi.Avalonia.ColorPicker" Version="11.2.1.6" />
-    <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.2.1.6" />
-    <PackageReference Include="Semi.Avalonia.TreeDataGrid" Version="11.0.10.2" />
-    <PackageReference Include="Silk.NET.Input.Glfw" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.Windowing.Common" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.22.0" />
-    <PackageReference Include="System.Reactive" Version="6.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AssimpNet" Version="4.1.0" />
+		<PackageReference Include="Avalonia" Version="11.2.6" />
+		<PackageReference Include="Avalonia.Desktop" Version="11.2.6" />
+		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.6" />
+		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.6" />
+		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
+		<PackageReference Include="Avalonia.Diagnostics" Version="11.2.6">
+			<IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
+			<PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Dock.Avalonia" Version="11.2.0.2" />
+		<PackageReference Include="Dock.Model.Mvvm" Version="11.2.0.2" />
+		<PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
+		<PackageReference Include="ReactiveUI" Version="20.2.45" />
+		<PackageReference Include="Semi.Avalonia" Version="11.2.1.6" />
+		<PackageReference Include="Semi.Avalonia.ColorPicker" Version="11.2.1.6" />
+		<PackageReference Include="Semi.Avalonia.DataGrid" Version="11.2.1.6" />
+		<PackageReference Include="Semi.Avalonia.TreeDataGrid" Version="11.0.10.2" />
+		<PackageReference Include="Silk.NET.Input.Glfw" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.Windowing.Common" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.22.0" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
+		<PackageReference Include="System.Reactive" Version="6.0.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Core\Core.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="views\editor\EditorWindow.axaml.cs">
-      <DependentUpon>EditorWindow.axaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="views\editor\EditorWindow.axaml.cs">
+			<DependentUpon>EditorWindow.axaml</DependentUpon>
+		</Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+		<AvaloniaResource Include="assets\**\*" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<AvaloniaResource Update="assets\block.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</AvaloniaResource>
+		<AvaloniaResource Update="assets\bulb.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</AvaloniaResource>
+		<AvaloniaResource Update="assets\ExpanderStyle.axaml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</AvaloniaResource>
+		<AvaloniaResource Update="assets\geometry.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</AvaloniaResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="assets\square.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EditorConfigFiles Remove="C:\Users\arunc\Desktop\GameEditor\EditorAvalonia\.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="C:\Users\arunc\Desktop\GameEditor\EditorAvalonia\.editorconfig" />
+	</ItemGroup>
 </Project>
