--- a/RunTimeAndroid/RunTimeAndroid.csproj
+++ b/RunTimeAndroid/RunTimeAndroid.csproj
@@ -105,6 +105,9 @@
     <PackageReference Include="Silk.NET.Windowing">
       <Version>2.22.0</Version>
     </PackageReference>
+    <PackageReference Include="SixLabors.ImageSharp">
+      <Version>3.1.7</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.5" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.0.0.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
